@@ -1,5 +1,5 @@
 Package: BiocCheck
-Version: 1.27.16
+Version: 1.27.17
 Title: Bioconductor-specific package checks
 Description: Executes Bioconductor-specific package checks.
 Authors@R: c(
@@ -14,7 +14,6 @@ Authors@R: c(
     person("Federico", "Marini", role="ctb"))
 Depends: R (>= 3.5.0)
 License: Artistic-2.0
-LazyData: false
 VignetteBuilder: knitr
 Imports: biocViews (>= 1.33.7), BiocManager, stringdist, graph, httr, tools,
     optparse, codetools, methods, utils, knitr
